Initial commit: Subscriber package generates subscriber_node, which listens to publisher_topic (generated by publisher_node).
 On branch master
 Changes to be committed:
	new file:   CMakeLists.txt
	new file:   package.xml
	new file:   src/subscriber_code.cpp

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -10,7 +10,7 @@ project(subscriber_package)
 find_package(catkin REQUIRED COMPONENTS
   roscpp
   std_msgs
-  publisher_package
+#  publisher_package
 )
 
 ## System dependencies are found with CMake's conventions
