--- a/package.xml
+++ b/package.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0"?>
 <package format="2">
-<build_depend>publisher_package</build_depend>
+<!--<build_depend>publisher_package</build_depend> -->
   <name>subscriber_package</name>
   <version>0.0.0</version>
   <description>The subscriber_package package</description>
